# zerotsukudl_rust

./: .gitignore  Cargo.toml  Makefile
src/: deep_learning.rs  dl4wasm.rs  image.rs  lib.rs  main.rs  mnist_images.rs
src/deep_learning/: common.rs  graph_plotter.rs  layer.rs  neural_network.rs  optimizer.rs  statistics.rs
src/deep_learning/graph_plotter/: other.rs  wasm.rs
src/deep_learning/layer/: affine.rs  affine_direct_value.rs  batch_norm.rs  convolution.rs  direct_value.rs  dropout.rs  network_layer.rs  pooling.rs  relu.rs  sigmoid.rs  softmax_with_loss.rs
src/deep_learning/optimizer/: adagrad.rs  adam.rs  momentum.rs  optimizer.rs  rmsprop.rs  sgd.rs
www/: package-lock.json  package.json  webpack.config.js
www/src/: index.html
www/src/script/: main.js
