[package]
name = "deep_learning"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ndarray = "0.15.0"
mnist = "0.4.1"
rulinalg="0.4.2"
wasm-bindgen = "0.2.63"
wasm-bindgen-futures = "0.4.28"
js-sys = "0.3"
rand = "0.8.4"
getrandom = { version = "0.2", features = ["js"] }
plotters = "0.3.1"
chrono = "0.4"
serde = { version = "1.0.80", features = ["derive"] }
serde_derive = "^1.0.59"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  'ImageData',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
mockall = "0.10.2"
mockall_double = "0.2.0"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"